--- a/API/.env
+++ b/API/.env
@@ -1,3 +1,5 @@
-BQ_KEY_JSON = 'enter/your/path/to/key.json' # Request key from https://forms.office.com/r/Hg6LfjhrXc
+# Request key from https://forms.office.com/r/Hg6LfjhrXc
+# BQ_KEY_JSON = '/Users/piyush/Desktop/plane-detection-352701-90220d8b4de6.json'
+BQ_KEY_JSON = 'key.json'
 BQ_KEY_JSON_INVALID = '~/incorrect/path/invalid.json'
-LOGLEVEL = 'INFO' # Set to DEBUG / INFO / ERROR
+LOGLEVEL = 'DEBUG' # Set to DEBUG / INFO / ERROR
