--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-
-
-## user defined
-
 google-cloud-bigquery==2.34.1
 fastapi
 uvicorn
@@ -12,3 +8,4 @@ matplotlib
 pyarrow
 ipykernel
 geopandas
+gunicorn
