--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -9,14 +9,8 @@ pyarrow
 ipykernel
 geopandas
 gunicorn
-
-#
-python-dotenv
-pandas
-gunicorn
-google-cloud-bigquery==2.34.1
-Flask
-dash
-ipywidgets
-dash-bootstrap-components
-
+sqlalchemy
+passlib
+python-jose
+bcrypt
+python-multipart
