--- a/.github/workflow/gcp.yml
+++ b/.github/workflow/gcp.yml
@@ -2,7 +2,7 @@
 name: Build and Push Docker Image to Google Cloud Platform
 on:
   push:
-    branches: [ deploy-app ]
+    branches: [ deploy-api ]
 jobs:
   build-push-gcr:
     name: Build and Push to GCP
@@ -26,7 +26,6 @@ jobs:
     - name: Configure Docker Client
       run: |-
         gcloud auth configure-docker --quiet
-        gcloud auth configure-docker us-east1-docker.pkg.dev --quiet
 
     - name: Push Docker Image to Container Registry (GCR)
       env:
